@@ -1,8 +1,8 @@
 //
 //  Class for configuration of the Event Receiver
 //
-#ifndef Evr_ConfigV1_hh
-#define Evr_ConfigV1_hh
+#ifndef Evr_ConfigV2_hh
+#define Evr_ConfigV2_hh
 
 #include "pdsdata/xtc/TypeId.hh"
 #include <stdint.h>
@@ -11,14 +11,23 @@ namespace Pds {
   namespace EvrData {
     class PulseConfig;
     class OutputMap;
-    class ConfigV1 {
+    class ConfigV2 {
     public:
-      enum { Version=1 };
-      ConfigV1 ();
-      ConfigV1 (unsigned npulses,
+      enum { Version=2 };
+      enum RateCode { r120Hz, r60Hz, r30Hz, r10Hz, r5Hz, r1Hz, r0_5Hz, NumberOfRates };
+      enum BeamCode { Off, On };
+      ConfigV2 ();
+      ConfigV2 (BeamCode bc,
+		RateCode rc,
+		unsigned npulses,
 		const PulseConfig* pulses,
 		unsigned noutputs,
 		const OutputMap* outputs);
+
+      BeamCode beam  () const;
+      RateCode rate  () const;
+      unsigned opcode() const;
+      static unsigned opcode(BeamCode, RateCode);
 
       //  pulse configurations appended to this structure
       unsigned npulses() const;
@@ -31,6 +40,7 @@ namespace Pds {
       //  size including appended PulseConfig's and OutputMap's
       unsigned size() const;
     private:
+      uint32_t _opcode;
       uint32_t _npulses;
       uint32_t _noutputs;
     };
