@@ -1,2 +1,5 @@
 libnames := evrdata
-libsrcs_evrdata := src/ConfigV1.cc
+libsrcs_evrdata := src/PulseConfig.cc
+libsrcs_evrdata += src/OutputMap.cc
+libsrcs_evrdata += src/ConfigV1.cc
+libsrcs_evrdata += src/ConfigV2.cc 
